Changelog
=========

1.0 (unreleased)
----------------

- Make sure the import of the Globals module happens after the variable has
  been set. This should make it compatible with Zope 2.10.9+.
  [hannosch]

1.0b1 (2009-08-11)
------------------

- Got the test coverage for the code reloading part up to 100%.
  [hannosch]

- Fixed reloading of the module scope. The func_globals of functions is now
  updated with new names introduced into the module scope, so adding new
  import statements will work.
  [hannosch]

- Specified package dependencies, added development buildout and added
  extensive test coverage.
  [hannosch]

- Figured out a way to support reloading code that uses decorators.
  [hannosch]

0.11 (2009-05-30)
-----------------

- Added the z3c.autoinclude entry point so that plone.reload is automatically
  loaded on Plone 3.3 and above.
  [optilude]

0.10 (2009-03-22)
-----------------

- Do not remove attributes from classes when reloading. ZCML directives and
  other wiring is liable to add attributes to class that will then disappear
  on reload. This means that if you have removed a class attribute, it will
  *not* disappear on reload. In this case: restart. :)
  [optilude]


0.9 (2008-07-23)
----------------

- Removed the manual cleanup approach for extra registries populated by ZCML
  parsing. Instead we use the registry of cleanup functions inside
  zope.testing.cleanup to automatically pick up all cleaning functions.
  [hannosch]

0.8 (2008-06-30)
----------------

- Wrap the setupFinalLogging method of the Zope2 starter objects to initialize
  our internal modified times registry once after Zope is finished loading.
  This is the closest I could find that resembles a `Zope is finished loading`
  event and should help to remove the double-reload behavior.
  [hannosch]

- Only expose the reload view in Zope 2 development mode.
  [hannosch]

- In case of errors during ZCML reload, restore the original global site