@@ -1,4 +1,1 @@
-from Globals import DevelopmentMode
-
-ENABLED = bool(DevelopmentMode)
 EXCLUDE_SITE_PACKAGES = True
